--- a/jeb-portfolio.html
+++ b/jeb-portfolio.html
@@ -219,7 +219,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Jeballon. All rights reserved.</p>
+      <p>© 2025 Jeballon0. All rights reserved. </p>
     </footer>
   </div>
 </body>
