--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="en">
 <head> 
   <meta charset="UTF-8" />
@@ -190,7 +189,7 @@
       <div class="grid-2">
         <div class="card">
           <p><em>“Working with Jeb was an absolute breeze. The project was managed with precision from start to finish and submitted right on time—no delays, no excuses. On top of that, Jeb's server moderation skills are outstanding. It’s one of the few communities where I feel genuinely safe and respected.”</em></p>
-          <p><strong>- Imaboodboi</strong></p>
+          <p><strong>- Imagoodboi</strong></p>
         </div>
         <div class="card">
           <p><em>“Deadlines? Handled. Chaos? Tamed. Jeb is seriously underrated when it comes to managing projects and communities. He strikes the perfect balance between being approachable and staying firm when needed. The server feels like a safe, friendly space because of his consistent leadership.”</em></p>
@@ -213,8 +212,13 @@
         <div class="card">
           <h3>Forgotten Trial</h3>
           <p><strong>Role:</strong> Project Manager</p>
-          <p>Managed the overall development of Forgotten Trial, ensuring smooth collaboration between scripters, builders, and designers. Helped shape gameplay systems and kept production timelines on track.</p>
+          <p>Managed the overall development of Forgotten Trial, ensuring smooth collaboration between scripters, builders, and designers. Helped shape gameplay systems and kept production timelines on track.</p>          
         </div>
+        <div class ="card">
+          <h3>BWT Competitive Racing League</h3>
+      <p><strong>Role:</strong> Administrator</p>
+      <p>Led the management of the BWT Competitive Racing League, organizing team schedules, ensuring fair play, resolving disputes, and handling communications across multiple divisions. Kept the league running smoothly through organized systems and clear leadership.</p>
+    </div>
       </div>
     </section>
 
