--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jeb's Roblox Portfolio</title>
+  <title>Jeb's Portfolio</title>
   <style>
     /* Basic Reset & Fonts */ 
     * {
@@ -128,11 +128,11 @@
 
     <section id="about-me">
       <h2>About Me</h2>
-      <p>Hi! I'm Jeb, a Roblox Project Manager and skilled modeler with a passion for helping teams do their best work. I’ve worked with <strong>Ashen Trial Studios</strong> as a Head Moderator, where I made sure our projects stayed on track and everyone had what they needed to succeed. I also create high-quality models that bring ideas to life.</p>
+      <p>Hi! I'm Jeb, a Project Manager and skilled modeler with a passion for helping teams do their best work. I’ve worked with <strong>Ashen Trial Studios</strong> as a Head Moderator, where I made sure our projects stayed on track and everyone had what they needed to succeed. I also create high-quality models that bring ideas to life.</p>
       <p>I also served as an Administrator at <strong>BWT</strong>, helping manage teams, handle internal operations, and keep the workflow smooth and productive. These roles helped me grow both technically and professionally.</p>
       <p>I believe in simple plans, clear goals, and strong teamwork. My job is to make sure everyone on the team is supported and can focus on creating great content without getting stuck on logistics.</p>
       <p>I enjoy turning ideas into finished projects and keeping things organized from start to finish. Whether it’s tracking progress, communicating between departments, or solving unexpected problems, I’m always ready to step in and help.</p>
-      <p>What I love most is seeing a project go from concept to something players enjoy. Helping a team reach that point is what drives me every day.</p>
+      <p>What I love most is seeing a project go from concept to something players enjoy. Helping a team reach that point is what drives me every day. I have also created an app called DevInsight which understands and explains what your code does. It corrects your code and helps making your life just a bit easier</p>
     </section>
 
     <section id="skills-tools">
@@ -147,6 +147,7 @@
             <li>Testing and QA</li>
             <li>Clear Communication</li>
             <li>Roblox Studio Basics</li>
+            <li>intermediate Coder</li>
           </ul>
         </div>
         <div>
@@ -221,9 +222,12 @@
     </div>
       </div>
     </section>
-
+<section id="contacts">
+   <h2>Contacts</h2>
+  <p>jebloveslearning@outlook.com</p>
+  <p>This is my <strong>OFFICIAL<strong> E-Mail ID. Contact me if you like.</p>
     <footer>
-      <p>© 2025 Jeballon0. All rights reserved. </p>
+      <p>© 2025 Jeballon. All rights reserved.</p>
     </footer>
   </div>
 </body>
