--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
       <p>I also served as an Administrator at <strong>BWT</strong>, helping manage teams, handle internal operations, and keep the workflow smooth and productive. These roles helped me grow both technically and professionally.</p>
       <p>I believe in simple plans, clear goals, and strong teamwork. My job is to make sure everyone on the team is supported and can focus on creating great content without getting stuck on logistics.</p>
       <p>I enjoy turning ideas into finished projects and keeping things organized from start to finish. Whether it’s tracking progress, communicating between departments, or solving unexpected problems, I’m always ready to step in and help.</p>
-      <p>What I love most is seeing a project go from concept to something players enjoy. Helping a team reach that point is what drives me every day. I have also created an app called DevInsight which understands and explains what your code does. It corrects your code and helps making your life just a bit easier</p>
+      <p>What I love most is seeing a project go from concept to something players enjoy. Helping a team reach that point is what drives me every day.</p>
+      <p> I have also created an app called <strong>DevInsight</strong> which understands and explains what your code does. It corrects your code and helps making your life just a bit easier</p>
     </section>
 
     <section id="skills-tools">
@@ -225,7 +226,7 @@
 <section id="contacts">
    <h2>Contacts</h2>
   <p>jebloveslearning@outlook.com</p>
-  <p>This is my <strong>OFFICIAL<strong> E-Mail ID. Contact me if you like.</p>
+  <p>This is my <strong>OFFICIAL</strong> E-Mail ID. Contact me if you like.</p>
     <footer>
       <p>© 2025 Jeballon. All rights reserved.</p>
     </footer>
