--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <section id="contacts">
    <h2>Contacts</h2>
   <p>jebloveslearning@outlook.com</p>
-  <p>This is my <strong>OFFICIAL</strong> E-Mail ID. Contact me if you like.</p>
+  <p>This is my <strong>OFFICIAL</strong> E-Mail ID.</p>
     <footer>
       <p>© 2025 Jeballon. All rights reserved.</p>
     </footer>
